syntax = "proto3";
package StrideLabs.stride.records;

option go_package = "github.com/Stride-Labs/stride/x/records/types";

message EpochUnbondingRecord {
  uint64 id = 1;
  int64 epochNumber = 2;

  message hostZoneUnbonding {
    uint64 amount = 1;
    string denom = 2;
    string hostZoneId = 3;
    bool   unbondingSent = 4;
  }

  map<string, hostZoneUnbonding> hostZoneUnbondings = 3;
}
